# PointCloudSelector

./: .gitignore  CMakeLists.txt  cleaned.pcd  default.rviz  package.xml  pointcloudsel.rviz  sel_panel_plugin.xml
launch/: setup.launch
pcs/: current_selection.pcd
src/: branch_cutting.py  cylinder_sac.cpp  interactive_marker.cpp  moving_marker.cpp  myviz.cpp  myviz.h  node.cpp  ply_to_bag.py  sel_panel.cpp  sel_panel.hpp  send_pcd_msg.cpp  test-ransac.py  weed-extraction.py  xyz_to_bag.py
